# voice-korea

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  assets  builder.Dockerfile  package-lock.json  package.json
package/api/: Cargo.toml  Makefile
package/api/src/: main.rs
package/api/src/common/: mod.rs
package/api/src/controllers/: mod.rs
package/api/src/controllers/m1/: mod.rs
package/api/src/controllers/v1/: mod.rs
package/api/src/middleware/auth/: mod.rs
package/api/src/utils/: email.rs  error.rs  hash.rs  mod.rs  nonce_lab.rs  time.rs
package/api/src/utils/jwt/: mod.rs
package/api/src/utils/nonce_lab/: mod.rs  models.rs
package/api/src/v1/: mod.rs
package/api/src/v1/search/: mod.rs
package/models/: Cargo.toml
package/models/src/: lib.rs
package/models/src/attribute/: mod.rs
package/models/src/field/: mod.rs
package/models/src/group/: mod.rs
package/models/src/member/: mod.rs
package/models/src/metadata/: mod.rs
package/models/src/opinion/: mod.rs
package/models/src/organization/: mod.rs
package/models/src/pagination/: mod.rs
package/models/src/panel/: mod.rs
package/models/src/public_opinion/: mod.rs
package/models/src/public_survey/: mod.rs
package/models/src/search/: mod.rs
package/models/src/survey/: mod.rs
package/models/src/update_field/: mod.rs
package/models/src/user/: mod.rs
package/watcher/: Cargo.toml  Makefile
package/watcher/src/: lib.rs  main.rs
platform/: Cargo.toml  Dioxus.toml  Dockerfile  Makefile  package-lock.json  package.json  tailwind.config.js
platform/assets/: main.css
platform/public/: main.css  tailwind.css
platform/src/: lib.rs  main.rs  routes.rs
platform/src/api/: mod.rs
platform/src/api/aws/ses/: mod.rs
platform/src/api/common/: mod.rs
platform/src/api/question/: mod.rs
platform/src/api/survey/: mod.rs
platform/src/api/test/: mod.rs
platform/src/api/total/survey/: mod.rs
platform/src/api/v1/: mod.rs
platform/src/api/v1/attrcerts/: mod.rs
platform/src/api/v1/auth/: mod.rs
platform/src/api/v1/search/: mod.rs
platform/src/api/v1/surveys/: mod.rs  upsert_survey.rs
platform/src/api/v1/users/: login.rs  mod.rs  reset.rs  signup.rs  verify.rs
platform/src/api/v2/survey/: mod.rs
platform/src/components/alert/: mod.rs
platform/src/components/bar_graph/: mod.rs
platform/src/components/bottom/: i18n.rs  mod.rs
platform/src/components/button/: mod.rs
platform/src/components/calendar/: controller.rs  mod.rs
platform/src/components/checkbox/: mod.rs
platform/src/components/icons/: cancel.rs  mod.rs
platform/src/components/input/: mod.rs
platform/src/components/label/: mod.rs
platform/src/components/pi_graph/: mod.rs
platform/src/components/popup/: mod.rs
platform/src/components/select/: mod.rs
platform/src/components/stepper/: mod.rs
platform/src/components/table_row/: mod.rs
platform/src/components/upload_button/: mod.rs
platform/src/layouts/root_layout/: header.rs  i18n.rs  mod.rs  side_bar.rs
platform/src/models/pi/: mod.rs
platform/src/models/question/: mod.rs
platform/src/models/survey/: mod.rs
platform/src/models/user/: mod.rs
platform/src/pages/attributes/: controller.rs  i18n.rs  mod.rs
platform/src/pages/create/: controller.rs  i18n.rs  mod.rs  step_four.rs  step_one.rs  step_three.rs  step_two.rs
platform/src/pages/dashboard/: controller.rs  dashboard_card.rs  dashboard_row.rs  i18n.rs  mod.rs
platform/src/pages/find_email/: controller.rs  i18n.rs  mod.rs
platform/src/pages/group/: controller.rs  i18n.rs  mod.rs
platform/src/pages/group/_id/: mod.rs
platform/src/pages/groups/: controller.rs  i18n.rs  mod.rs  page.rs
platform/src/pages/groups/_id/: controller.rs  i18n.rs  mod.rs  page.rs
platform/src/pages/id/response_report/: controller.rs  i18n.rs  mod.rs
platform/src/pages/id/select_response/: controller.rs  i18n.rs  mod.rs
platform/src/pages/id/survey_summary/: controller.rs  i18n.rs  mod.rs
platform/src/pages/id/write_question/: controller.rs  i18n.rs  mod.rs
platform/src/pages/id/write_title/: controller.rs  i18n.rs  mod.rs
platform/src/pages/login/: controller.rs  i18n.rs  mod.rs
platform/src/pages/member/: controller.rs  i18n.rs  mod.rs
platform/src/pages/member/_id/: controller.rs  i18n.rs  mod.rs
platform/src/pages/members/: controller.rs  i18n.rs  mod.rs  page.rs
platform/src/pages/members/_id/: controller.rs  i18n.rs  mod.rs  page.rs
platform/src/pages/not_found/: mod.rs
platform/src/pages/opinions/: controller.rs  i18n.rs  mod.rs  page.rs
platform/src/pages/opinions/new/: composition_commitee.rs  composition_opinion.rs  composition_panel.rs  controller.rs  i18n.rs  input_opinion.rs  mod.rs  page.rs  preview.rs  (+1 more)
platform/src/pages/panels/: controller.rs  i18n.rs  page.rs
platform/src/pages/reset_password/: controller.rs  i18n.rs  mod.rs
platform/src/pages/resources/: controller.rs  i18n.rs  page.rs
platform/src/presentations/attributes/: controller.rs  mod.rs
platform/src/presentations/create/: controller.rs  i18n.rs  mod.rs  step_four.rs  step_one.rs  step_three.rs  step_two.rs
platform/src/presentations/dashboard/: controller.rs  dashboard_card.rs  dashboard_row.rs  mod.rs
platform/src/presentations/find_email/: mod.rs
platform/src/presentations/login/: controller.rs  i18n.rs  mod.rs
platform/src/presentations/reset_password/: controller.rs  i18n.rs  mod.rs
platform/src/presentations/root/: mod.rs
platform/src/presentations/select_response/: controller.rs  mod.rs
platform/src/presentations/select_response_detail/: controller.rs  i18n.rs  mod.rs
platform/src/presentations/survey_summary/: controller.rs  i18n.rs  mod.rs
platform/src/presentations/write_question/: controller.rs  i18n.rs  mod.rs
platform/src/presentations/write_title/: controller.rs  mod.rs
platform/src/service/: attribute_api.rs  group_api.rs  login_service.rs  member_api.rs  metadata_api.rs  opinion_api.rs  organization_api.rs  panel_api.rs  popup_service.rs  survey_api.rs
platform/src/utils/: api.rs  context.rs  db.rs  logger.rs  time.rs
(+39 files in other folders)
