[package]
name = "platform"
version = "0.1.14"
authors = ["victor138128 <yepp0517@naver.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.6.0", features = [
  "default",
  "fullstack",
  "router",
] }
chrono = "0.4"
dioxus-aws = { version = "0.6.13" }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
dioxus-logger = "0.5.1"
easy-dynamodb = { version = "0.1.6", optional = true }
slog = { version = "2.7.0" }
slog-term = { version = "2.9.1", optional = true }
aws-config = { version = "1.1.7", features = [
  "behavior-version-latest",
], optional = true }
aws-sdk-sesv2 = { version = "1.52.0", optional = true }
aws-sdk-dynamodb = { version = "1.39.0", features = [
  "behavior-version-latest",
], optional = true }
regex = "1.3.9"
rand = { version = "0.8.5", optional = true }
static_str_ops = { version = "0.1.2", optional = true }
sha3 = "0.10.8"
models.workspace = true
urlencoding = { version = "2.1.3", optional = true }
axum = { version = "0.7.9", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }
wasm-bindgen-futures = { version = "0.4.49", optional = true }
web-sys = { version = "0.3.74", optional = true }

[features]
default = []
server = [
  "dioxus-aws/server",
  "easy-dynamodb",
  "aws-config",
  "aws-sdk-sesv2",
  "rand",
  "aws-sdk-dynamodb",
  "slog-term",
  "static_str_ops",
  "urlencoding",
  "axum",
]
lambda = ["dioxus-aws/lambda", "server"]
web = ["dioxus-aws/web", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
static_str_ops = ["dep:static_str_ops"]
