[package]
name = "models"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
dioxus-translate = { version = "0.1.0", features = ["ko"] }

[features]
web = ["web-only"]
web-only = ["dioxus-translate/web"]