[package]
name = "watcher"
version = "1.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
by-axum.workspace = true
reqwest.workspace = true
easy-dynamodb.workspace = true
slog.workspace = true
models.workspace = true
chrono.workspace = true
tokio = { version = "1.41.1", features = ["full"] }
