[package]
name = "watcher"
version = "1.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
slog.workspace = true
models.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { workspace = true }
serde_json = "1.0.133"
lambda_http = "0.13.0"

[features]
default = []
